[package]
name = "Engima"
version = "0.2.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
description = "A simple Enigma machine simulator"
repository = "https://github.com/Andrew-McCall/Engima-rs"
readme = "README.md"
authors = ["Andrew McCall"]
documentation = "https://github.com/Andrew-McCall/Engima-rs#readme"
keywords = ["enigma", "machine", "simulator", "cli", "cryptography"]
categories = ["cryptography", "simulator", "enigma", "machine", "cli"]

[dependencies]
