[package]
name = "enigma-cli"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A command-line interface for an Enigma machine simulator. Configurable with any reflector, number of rotors, and plugboard pairs."
repository = "https://github.com/Andrew-McCall/engima-rs"
readme = "README.md"
authors = ["Andrew McCall"]
documentation = "https://github.com/Andrew-McCall/engima-rs#readme"
keywords = ["enigma", "machine", "simulator", "cli", "cryptography"]
categories = [
    "cryptography",
    "command-line-interface",
    "mathematics",
    "science",
    "encoding",
]

[lib]
name = "enigma"
path = "src/lib.rs"

[dependencies]
